Fix width on mobile devives

--- a/src/less/Components/Gallery.less
+++ b/src/less/Components/Gallery.less
@@ -1,6 +1,9 @@
 .gallery {
-    padding: 0 10px;
     padding-bottom: 48px;
+
+    .gallerry-inner {
+        padding: 0 10px;
+    }
 
     .title {
         font-size: 50px;
